# COMP4901B-LLMs

./: .gitignore  README.md  main.py  pyproject.toml
assignment1/: README.md  download_data.sh
assignment1/data_preprocess/: homework.py
assignment1/llama_training/: colab_demo.ipynb  llama.py  run_babylm.sh  run_llama.py  utils.py
assignment1/report/: hw1.tex
assignment2/: .gitignore  README.md  conversation_func.py  exercise_samples.json  exercise_solutions.json  generate_golden_answers.py  loss_functions.py  loss_functions_checker.py  prepare_exercise_samples.py  reference_answers.pkl  reverse_conversation_func.py  reverse_exercise_solutions.json  school_cluster.md  setup.sh  train_hw_parallel.py  utils.py
assignment2/ifeval/: inference_vllm.py  run.sh  run_ifeval.py  stats.ipynb
assignment2/ifeval/data/: sampled_200_input_data.jsonl  sampled_input_data.jsonl
assignment2/ifeval/results/HW2/: eval_results_loose.jsonl  eval_results_strict.jsonl  responses_HW2.jsonl  summary.json
assignment2/ifeval/results/HW2_lr1e-5/: eval_results_loose.jsonl  eval_results_strict.jsonl  responses_HW2_lr1e-5.jsonl  summary.json
assignment2/ifeval/results/HW2_lr5e-6/: eval_results_loose.jsonl  eval_results_strict.jsonl  responses_HW2_lr5e-6.jsonl  summary.json
assignment2/ifeval/results/HW2_lr5e-6_bsz256/: eval_results_loose.jsonl  eval_results_strict.jsonl  responses_HW2_lr5e-6_bsz256.jsonl  summary.json
assignment2/report/: hw2.tex
assignment2/scripts/: check_exercises_1.sh  check_exercises_2.sh  check_exercises_3.sh  check_exercises_4.sh  sft.sh  sft_offload.sh
assignment3/: .gitignore  README.md  evaluate_model_outputs.py  filter_correct_examples.py  inference_vllm.py  loss_functions.py  main.py  pyproject.toml  train_gsm8k_self_training_lora.py
assignment3/ckpt/bsz_256/iteration_0/: evaluation_metrics.json
assignment3/ckpt/bsz_64/iteration_0/: evaluation_metrics.json
assignment3/ckpt/default_multi/iteration_0/: evaluation_metrics.json
assignment3/ckpt/default_multi/iteration_1/: evaluation_metrics.json
assignment3/ckpt/default_multi/iteration_2/: evaluation_metrics.json
assignment3/ckpt/default_multi/iteration_3/: evaluation_metrics.json
assignment3/ckpt/first-run/iteration_0/: evaluation_metrics.json
assignment3/ckpt/lr_1e-5/iteration_0/: evaluation_metrics.json
assignment3/ckpt/lr_4e-5/iteration_0/: evaluation_metrics.json
assignment3/ckpt/q_1500/iteration_0/: evaluation_metrics.json
assignment3/ckpt/q_3000/iteration_0/: evaluation_metrics.json
assignment3/report/: hw3.tex
assignment3/results/baseline/: Qwen3-0.6B_20251113_021752_evaluation.jsonl  Qwen3-0.6B_20251113_160745_evaluation.jsonl  Qwen3-0.6B_20251113_160745_inference.jsonl  Qwen3-0.6B_20251113_223541_evaluation.jsonl  Qwen3-0.6B_20251113_223541_inference.jsonl
assignment3/results/baseline_4/: Qwen3-0.6B_20251114_153859_evaluation_metrics.json
assignment3/results/baseline_8/: Qwen3-0.6B_20251114_154825_evaluation_metrics.json  Qwen3-0.6B_20251114_201620_evaluation_metrics.json
assignment3/results/bsz_256_8/: model_iter_1-merged_20251115_023231_evaluation_metrics.json
assignment3/results/bsz_64_8/: model_iter_1-merged_20251115_032046_evaluation_metrics.json
assignment3/results/default_8/: model_iter_1-merged_20251114_200040_evaluation_metrics.json
assignment3/results/default_multi_iter_1_8/: model_iter_1-merged_20251115_060929_evaluation_metrics.json
assignment3/results/default_multi_iter_2_8/: model_iter_2-merged_20251115_061854_evaluation_metrics.json
assignment3/results/default_multi_iter_3_8/: model_iter_3-merged_20251115_062827_evaluation_metrics.json
assignment3/results/default_multi_iter_4_8/: model_iter_4-merged_20251115_063821_evaluation_metrics.json
assignment3/results/lr_1e-5_8/: model_iter_1-merged_20251114_223041_evaluation_metrics.json
assignment3/results/lr_4e-5_8/: model_iter_1-merged_20251114_232942_evaluation_metrics.json
assignment3/results/q_1500_8/: model_iter_1-merged_20251115_014117_evaluation_metrics.json
assignment3/results/q_3000_8/: model_iter_1-merged_20251115_004320_evaluation_metrics.json
assignment3/scripts/: download.py  inference.ipynb  model.ipynb  run_gsm8k_eval.sh  self_train_gsm8k.sh  setup.sh  train_eval.sh  train_eval_multi.sh
assignment3/tests/: README.md  run_all_tests.py  test_evaluation_functions.py  test_format_prompts.py
assignment4/: .gitignore  README.md  pyproject.toml
assignment4/report/: hw4.tex
assignment4/results/code/: evaluation_code.jsonl  evaluation_code_metrics.json  prediction_code.jsonl  trajectories_code.jsonl
assignment4/results/nocode/: evaluation_nocode.jsonl  evaluation_nocode_metrics.json  prediction_nocode.jsonl  trajectories_nocode.jsonl
assignment4/scripts/: evaluate_aime.py
assignment4/src/: agent.py  evaluate.py  prompts.py  schema.py  test.ipynb  tools.py
group-project/: README.md
(+4 files in other folders)
