[project]
name = "comp4901b-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "datasets==2.21.0",
    "dotenv>=0.9.9",
    "fasttext>=0.9.3",
    "gradescope-utils==0.5.0",
    "html2text>=2025.4.15",
    "huggingface-hub[cli]==0.24.6",
    "importlib-metadata>=8.7.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nltk>=3.9.2",
    "regex==2024.7.24",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "typing>=3.10.0.0",
    "wandb>=0.22.1",
    "warcio==1.7.4",
]
