[project]
name = "comp4901b-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "datasets==4.0.0",
    "deepspeed>=0.18.1",
    "dotenv>=0.9.9",
    "hjson>=3.1.0",
    "immutabledict>=4.2.2",
    "ipykernel>=7.1.0",
    "langdetect>=1.0.9",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers[torch]==4.57.1",
    "vllm==0.10.2",
    "wandb>=0.22.2",
]
