[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp4901b-hw4"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "COMP4901B Student"}
]
keywords = ["qa", "nlp", "llm", "retrieval", "bm25", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Dependencies
    "pyserini>=0.20.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.19.0",
    # LLM API client (OpenAI-compatible)
    "openai>=1.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "math-verify>=0.8.0",
]

[project.optional-dependencies]
# Optional dependencies for local model inference
local = [
    "vllm>=0.3.0",
    "ollama",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# All optional dependencies
all = [
    "comp4901b-hw4[local,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/COMP4901B-Homework4"
Repository = "https://github.com/yourusername/COMP4901B-Homework4"

[project.scripts]
# CLI entry points (optional - can add if needed)
# qa-agent = "src.agent:main"
# build-index = "scripts.build_index:main"

[tool.setuptools]
packages = ["src", "scripts"]

[tool.setuptools.package-data]
src = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | indexes
  | data
  | results
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "venv", "build", "dist", "indexes", "data", "results"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
